SET(CMAKE_THREAD_PREFER_PTHREADS YES)
FIND_PACKAGE(Threads REQUIRED)

FILE(GLOB_RECURSE Sources "*.h" "*.cpp")
SET(PublicHeaders "vman.h")
SET(Libraries)

LIST(APPEND Sources "${TinyThreadSource}/tinythread.cpp")

IF(CMAKE_USE_WIN32_THREADS_INIT)
    LIST(APPEND "winmm")
ELSEIF(CMAKE_USE_PTHREADS_INIT)
    LIST(APPEND Libraries ${CMAKE_THREAD_LIBS_INIT})
ENDIF()


ADD_LIBRARY("vman" STATIC ${PublicHeaders} ${Sources})
TARGET_LINK_LIBRARIES("vman" ${Libraries})
SET_TARGET_PROPERTIES("vman" PROPERTIES PUBLIC_HEADER "${PublicHeaders}")


INSTALL(TARGETS "vman"
    RUNTIME DESTINATION "bin"
    ARCHIVE DESTINATION "lib"
    LIBRARY DESTINATION "lib"
    PUBLIC_HEADER DESTINATION "include"
)
